댓글 예외처리

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:mysql://spring-boot-db.c2hnskjrdgft.ap-northeast-2.rds.amazonaws.com:3306/hh99_blog
+spring.datasource.username=hyunwoome
+spring.datasource.password=Ejqjrl89
+spring.jpa.hibernate.ddl-auto=update
